修改第三方绑定逻辑

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -170,6 +170,14 @@
                         }else{
                             if(result.code == 2015){
                                 $("#password").next().html(result.message);
+                            }else if(result.code == 2018){
+                                $("#password").next().html(result.message);
+                            }else if(result.code == 2019){
+                                $("#password").next().html(result.message);
+                            }else if(result.code == 2020){
+                                $("#code").parent().next().html(result.message);
+                            }else if(result.code == 2021){
+                                $("#code").parent().next().html(result.message);
                             }else{
                                 $("#code").parent().next().html(result.message);
                             }
