--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -259,7 +259,7 @@
                     </div>
                     <input id="oauthsId" hidden="hidden" th:value="${oauthsId}">
                     <input id="oauthsType" hidden="hidden" th:value="${oauthsType}">
-                    <input id="loginType" value="1">
+                    <input id="loginType" hidden="hidden" value="1">
                 </form>
             </div>
         </div>
