修复修改密码和修改手机号漏洞

--- a/src/main/resources/templates/findpassword.html
+++ b/src/main/resources/templates/findpassword.html
@@ -164,23 +164,35 @@
             var checkPwd = newPassword() && confirmPassword();
             var newPwd = $("#newPwd").val();
             var modifyPhone = $(".modifyPhone").val();
-            if(checkPwd == true){
-                $.ajax({
-                    type:"post",
-                    url:"/modifyPwd",
-                    contentType:"application/json",
-                    data:JSON.stringify({
-                        "newPwd":newPwd,
-                        "modifyPhone":modifyPhone
-                    }),
-                    success:function (result) {
-                        if(result.code == 200){
-                            window.location.href="/success?info=修改密码成功";
-                        }
-                    },
-                    dataType:"json"
-                });
-            }
+            layui.use('layer', function(){
+                var layer = layui.layer;
+                if(checkPwd == true){
+                    $.ajax({
+                        type:"post",
+                        url:"/modifyPwd",
+                        contentType:"application/json",
+                        data:JSON.stringify({
+                            "newPwd":newPwd,
+                            "modifyPhone":modifyPhone
+                        }),
+                        success:function (result) {
+                            if(result.code == 200){
+                                window.location.href="/success?info=修改密码成功";
+                            }else if(result.code == 2022){
+                                layer.open({
+                                    content: '请重新验证手机号',
+                                    yes: function(index, layero){
+                                        window.location.reload();
+                                    },cancel: function(index, layero){
+                                        window.location.reload();
+                                    }
+                                });
+                            }
+                        },
+                        dataType:"json"
+                    });
+                }
+            });
         }
     </script>
 </head>
