增加绑定邮箱功能

--- a/src/main/resources/templates/findpassword.html
+++ b/src/main/resources/templates/findpassword.html
@@ -87,13 +87,7 @@
         function getCode(value) {
             var obj = $("#el-code-button");
             var span = obj.children();
-            var phone = $("#phone").val();
-            var regExp = /^1(3|4|5|6|7|8|9)\d{9}$/;
-            if(phone == null || phone == ""){
-                $("#phone").next().html("请输入手机号");
-            }else if(regExp.test(phone) == false){
-                $("#phone").next().html("请输入正确的手机号");
-            }else{
+            var phone = $(".modifyAccount").val();
                 $.ajax({
                     type:"post",
                     url:"/getCode/"+value,
@@ -103,13 +97,11 @@
                         if(result.code == 200){
                             settime(obj,span);
                         }else{
-                            $("#phone").next().html(result.message);
+                            $(".el-code").next().html(result.message);
                         }
                     },
                     dataType:"json"
                 });
-            }
-
         }
 
         function settime(obj,span) { //发送验证码倒计时
@@ -128,31 +120,33 @@
             },1000)
         }
 
-        function check() {
-            var check = checkPhone() && checkCode();
-            var phone = $("#phone").val();
-            var code = $("#code").val();
-            var type = 3;
-            if(check == true){
+        function checkAccount() {
+            var account = $("#account").val();
+            if(!account){
+                $("#account").next().html("请输入手机号/邮箱");
+            }else{
                 $.ajax({
                     type:"post",
-                    url:"/loginUser/"+type,
+                    url:"/checkAccount",
                     contentType:"application/json",
                     data:JSON.stringify({
-                        "phone":phone,
-                        "code":code
+                        "account":account,
                     }),
                     success:function (result) {
                         if(result.code == 200){
                             $(".findpwd-b").removeClass("layui-hide");
                             $(".findpwd-a").addClass("layui-hide");
-                            $(".modifyPhone").val(phone);
-                        }else{
-                            if(result.code == 2013){
-                                $("#phone").next().html(result.message);
+                            if(account.length == 11){
+                                $(".findpwd-b h3").html("手机号："+account);
+                                $(".el-code-button").attr("onclick","getCode(3)");
+                                $(".modifyAccount").val(account);
                             }else{
-                                $("#code").parent().next().html(result.message);
+                                $(".findpwd-b h3").html("邮箱："+account);
+                                $(".el-code-button").attr("onclick","getEmailCode()");
+                                $(".modifyAccount").val(account);
                             }
+                        }else{
+                            $("#account").next().html(result.message);
                         }
                     },
                     dataType:"json"
@@ -161,9 +155,10 @@
         }
 
         function modifyPwd() {
-            var checkPwd = newPassword() && confirmPassword();
+            var checkPwd = newPassword() && confirmPassword() && checkCode();
             var newPwd = $("#newPwd").val();
-            var modifyPhone = $(".modifyPhone").val();
+            var modifyAccount = $(".modifyAccount").val();
+            var code = $("#code").val();
             layui.use('layer', function(){
                 var layer = layui.layer;
                 if(checkPwd == true){
@@ -173,20 +168,14 @@
                         contentType:"application/json",
                         data:JSON.stringify({
                             "newPwd":newPwd,
-                            "modifyPhone":modifyPhone
+                            "modifyAccount":modifyAccount,
+                            "code":code
                         }),
                         success:function (result) {
                             if(result.code == 200){
                                 window.location.href="/success?info=修改密码成功";
-                            }else if(result.code == 2022){
-                                layer.open({
-                                    content: '请重新验证手机号',
-                                    yes: function(index, layero){
-                                        window.location.reload();
-                                    },cancel: function(index, layero){
-                                        window.location.reload();
-                                    }
-                                });
+                            }else{
+                                $("#code").parent().next().html(result.message);
                             }
                         },
                         dataType:"json"
@@ -209,21 +198,15 @@
             <div class="register-container">
                 <div class="findpwd-a">
                     <div>
-                        <input type="text" class="el-input" id="phone" name="phone" placeholder="填写常用手机号" autocomplete="off" onkeyup="checkPhone()">
+                        <input type="text" class="el-input" id="account" name="account" placeholder="请输入绑定的手机号/邮箱" autocomplete="off">
                         <p class="error-message"></p>
                     </div>
                     <div class="form-group">
-                        <div class="el-code">
-                            <input type="text" class="el-input" id="code" name="code" placeholder="请输入短信验证码" autocomplete="off" onkeyup="checkCode()">
-                            <button type="button" class="btn-login el-code-button" onclick="getCode(3)" id="el-code-button"><span>点击获取</span></button>
-                        </div>
-                        <p class="error-message"></p>
-                    </div>
-                    <div class="form-group">
-                        <button type="button" class="el-button--primary" onclick="check()"><span>确认</span></button>
+                        <button type="button" class="el-button--primary" onclick="checkAccount()"><span>确认</span></button>
                     </div>
                 </div>
                 <div class="findpwd-b layui-hide">
+                    <h3 style="padding: 15px 0;text-align: center"></h3>
                     <div>
                         <input type="password" class="el-input" id="newPwd" name="newPwd" placeholder="新密码：6～16位字符，区分大小写" autocomplete="off" onkeyup="newPassword()">
                         <p class="error-message"></p>
@@ -233,10 +216,17 @@
                         <p class="error-message"></p>
                     </div>
                     <div class="form-group">
+                        <div class="el-code">
+                            <input type="text" class="el-input" id="code" name="code" placeholder="请输入短信/邮件验证码" autocomplete="off" onkeyup="checkCode()">
+                            <button type="button" class="btn-login el-code-button" id="el-code-button"><span>点击获取</span></button>
+                        </div>
+                        <p class="error-message"></p>
+                    </div>
+                    <div class="form-group">
                         <button type="button" class="el-button--primary" onclick="modifyPwd()"><span>确认修改</span></button>
                     </div>
                 </div>
-                <input type="text" class="modifyPhone" hidden="hidden">
+                <input type="text" class="modifyAccount" hidden="hidden">
             </div>
         </div>
     </div>
